--- a/notebooks/1. AHN preprocessing.ipynb
+++ b/notebooks/1. AHN preprocessing.ipynb
@@ -188,8 +188,10 @@
    "source": [
     "We have a batch script to do this, it allows using multiple CPU threads to speed things up.\n",
     "\n",
-    "    cd ../scripts\n",
-    "    python ahn_batch_processor.py --in_folder ../datasets/ahn/ --out_folder ../datasets/ahn/ --resume --workers 4"
+    "```sh\n",
+    "cd ../scripts\n",
+    "python ahn_batch_processor.py --in_folder ../datasets/ahn/ --out_folder ../datasets/ahn/ --resume --workers 4\n",
+    "```"
    ]
   },
   {
