Example image in AHN preprocessing notebook. Fixed requirements.

--- a/notebooks/1. AHN preprocessing.ipynb
+++ b/notebooks/1. AHN preprocessing.ipynb
@@ -90,7 +90,7 @@
     "start = time.time()\n",
     "ahn_preprocessing.clip_ahn_las_tile(ahn_cloud, filename, out_folder='../datasets/ahn/', buffer=1)\n",
     "end = time.time()\n",
-    "print(f'Tile clipped in {end-start} seconds.')"
+    "print(f'Tile clipped in {end-start:.2f} seconds.')"
    ]
   },
   {
@@ -139,7 +139,7 @@
     "# This will create the AHN ground and building surfaces, with a 0.1m resolution, and save them as an .npz file.\n",
     "_file = ahn_preprocessing.process_ahn_las_tile(ahn_las_file, out_folder='../datasets/ahn/')\n",
     "end = time.time()\n",
-    "print(f'Processed LAS tile in {end-start}s.')\n",
+    "print(f'Processed LAS tile in {end-start:.2f}s.')\n",
     "\n",
     "# Load the result.\n",
     "ahn_tile = ahn_preprocessing.load_ahn_tile(_file)"
@@ -154,9 +154,10 @@
    "source": [
     "# Optional: plot the resulting surfaces.\n",
     "\n",
+    "%matplotlib widget\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(10,6))\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(10,5))\n",
     "im1 = ax1.imshow(ahn_tile['ground_surface'].astype('float64'), interpolation='none')\n",
     "im2 = ax2.imshow(ahn_tile['building_surface'].astype('float64'), interpolation='none')\n",
     "ax1.set_title('Ground surface')\n",
@@ -170,7 +171,17 @@
     "ax2.set_yticks([])\n",
     "plt.colorbar(im1, ax=ax1, fraction=0.046, pad=0.04)\n",
     "plt.colorbar(im2, ax=ax2, fraction=0.046, pad=0.04)\n",
+    "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75c2ae56-5929-49bd-a394-e73392734e36",
+   "metadata": {},
+   "source": [
+    "This will look like:\n",
+    "![Surface Plot](https://github.com/Amsterdam-AI-Team/Urban_PointCloud_Processing/blob/main/media/examples/surface_plot.png)"
    ]
   },
   {
