utils function for tile_code regex

--- a/notebooks/1. AHN preprocessing.ipynb
+++ b/notebooks/1. AHN preprocessing.ipynb
@@ -19,15 +19,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%config Completer.use_jedi = False\n",
-    "\n",
-    "# Add project src to path.\n",
+    "# Helper script to allow importing from parent folder.\n",
     "import set_path\n",
     "\n",
     "# Import modules.\n",
     "import numpy as np\n",
-    "import re\n",
-    "import pylas\n",
     "import time\n",
     "\n",
     "import src.preprocessing.ahn_preprocessing as ahn_preprocessing\n",
@@ -51,7 +47,7 @@
    "source": [
     "# The point cloud tile for which a corresponding AHN tile should be created.\n",
     "filename = '../datasets/pointcloud/filtered_2386_9702.laz'\n",
-    "tile_code = re.match(r'.*(\\d{4}_\\d{4}).*', filename)[1]"
+    "tile_code = las_utils.get_tilecode_from_filename(filename)"
    ]
   },
   {
@@ -76,7 +72,7 @@
     "# Load the AHN point cloud.\n",
     "# WARNING: this may require 16+ GB of RAM, depending on the size of the cloud.\n",
     "ahn_cloud_file = '../datasets/C_25DN2.LAZ'\n",
-    "ahn_cloud = pylas.read(ahn_cloud_file)"
+    "ahn_cloud = las_utils.read_las(ahn_cloud_file)"
    ]
   },
   {
@@ -200,8 +196,8 @@
     "We have a batch script to do this, it allows using multiple CPU threads to speed things up.\n",
     "\n",
     "```sh\n",
-    "cd ../scripts\n",
-    "python ahn_batch_processor.py --in_folder ../datasets/ahn/ --out_folder ../datasets/ahn/ --resume --workers 4\n",
+    "$ cd ../scripts\n",
+    "$ python ahn_batch_processor.py --in_folder ../datasets/ahn/ --out_folder ../datasets/ahn/ --resume --workers 4\n",
     "```"
    ]
   },
