--- a/notebooks/2. Data fusion.ipynb
+++ b/notebooks/2. Data fusion.ipynb
@@ -30,7 +30,18 @@
     "import time\n",
     "\n",
     "import src.fusion as fusion\n",
+    "import src.utils.ahn_utils as ahn_utils\n",
     "from src.utils.labels import Labels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03d5299a-1ac2-4a63-949a-ff1ce2b77eb2",
+   "metadata": {},
+   "source": [
+    "### Using pre-processed AHN data\n",
+    "\n",
+    "Prepare data following notebook [1. AHN preprocessing](1.%20AHN%20preprocessing.ipynb)."
    ]
   },
   {
@@ -44,12 +55,67 @@
     "ahn_data_folder = '../datasets/ahn/'\n",
     "\n",
     "# Ground fuser using pre-processed AHN data.\n",
-    "ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_data_folder, method='npz', target='ground', epsilon=0.2)\n",
+    "npz_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_data_folder,\n",
+    "                                   method='npz', target='ground', epsilon=0.2)\n",
     "# Building fuser using pre-processed AHN data.\n",
-    "building_fuser = fusion.AHNFuser(Labels.BUILDING, ahn_data_folder, method='npz', target='building', epsilon=0.2)\n",
+    "npz_building_fuser = fusion.AHNFuser(Labels.BUILDING, ahn_data_folder,\n",
+    "                                     method='npz', target='building', epsilon=0.2)\n",
     "\n",
     "# Set-up pipeline.\n",
-    "fusers = (ground_fuser, building_fuser)\n",
+    "fusers = (npz_ground_fuser, npz_building_fuser)\n",
+    "#fusers = (npz_ground_fuser,)\n",
+    "pipeline = fusion.FusionPipeline(fusers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff3cc8fa-6017-4e03-a005-2879a48bf906",
+   "metadata": {},
+   "source": [
+    "### Using GeoTIFF data\n",
+    "\n",
+    "First, download the required GeoTIFF tile(s). E.g. for our demo point cloud, this is:\n",
+    "```sh\n",
+    "mkdir -p datasets/ahn\n",
+    "cd datasets/ahn/\n",
+    "wget https://download.pdok.nl/rws/ahn3/v1_0/05m_dtm/M_25DN2.ZIP\n",
+    "unzip M_25DN2.ZIP\n",
+    "rm M_25DN2.ZIP\n",
+    "```\n",
+    "Run the following cell to do this automatically."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25c95221-cb2f-4383-b3ff-d85858529edb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mkdir -p ../datasets/ahn\n",
+    "!wget https://download.pdok.nl/rws/ahn3/v1_0/05m_dtm/M_25DN2.ZIP -P ../datasets/ahn/\n",
+    "!unzip ../datasets/ahn/M_25DN2.ZIP -d ../datasets/ahn/\n",
+    "!rm ../datasets/ahn/M_25DN2.ZIP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3ccb183-9229-4dd2-a0a6-e05a7697ee78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data folder for the fusers.\n",
+    "ahn_data_folder = '../datasets/ahn/'\n",
+    "\n",
+    "# Ground fuser using AHN GeoTIFF data.\n",
+    "geotiff_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_data_folder,\n",
+    "                                       method='geotiff', target='ground', epsilon=0.2,\n",
+    "                                       fill_gaps=True, max_gap_size=100,\n",
+    "                                       smoothen=True, smooth_thickness=2)\n",
+    "\n",
+    "# Set-up pipeline.\n",
+    "fusers = (geotiff_ground_fuser,)\n",
     "pipeline = fusion.FusionPipeline(fusers)"
    ]
   },
