Fix notebook after load_ahn_tile moved to utils.

--- a/notebooks/1. AHN preprocessing.ipynb
+++ b/notebooks/1. AHN preprocessing.ipynb
@@ -27,6 +27,7 @@
     "import time\n",
     "\n",
     "import src.preprocessing.ahn_preprocessing as ahn_preprocessing\n",
+    "import src.utils.ahn_utils as ahn_utils\n",
     "import src.utils.las_utils as las_utils"
    ]
   },
@@ -138,7 +139,7 @@
     "print(f'Processed LAS tile in {end-start:.2f}s.')\n",
     "\n",
     "# Load the result.\n",
-    "ahn_tile = ahn_preprocessing.load_ahn_tile(_file)"
+    "ahn_tile = ahn_utils.load_ahn_tile(_file)"
    ]
   },
   {
