Small changes based on PR feedback.

--- a/notebooks/2. Data fusion.ipynb
+++ b/notebooks/2. Data fusion.ipynb
@@ -135,12 +135,12 @@
    "outputs": [],
    "source": [
     "# Select the file to process. The outfile can be set to 'None' to overwrite the file.\n",
-    "filename = '../datasets/pointcloud/filtered_2386_9702.laz'\n",
-    "outfile = '../datasets/pointcloud/labelled_2386_9702.laz'\n",
+    "in_file = '../datasets/pointcloud/filtered_2386_9702.laz'\n",
+    "out_file = '../datasets/pointcloud/labelled_2386_9702.laz'\n",
     "\n",
     "# Process the file.\n",
     "start = time.time()\n",
-    "pipeline.process_file(filename, outfile=outfile)\n",
+    "pipeline.process_file(in_file, out_file=out_file)\n",
     "end = time.time()\n",
     "print(f'Tile labelled in {end-start:.2f} seconds.')"
    ]
@@ -171,6 +171,14 @@
     "# Process the folder.\n",
     "pipeline.process_folder(in_folder, out_folder=out_folder, suffix=suffix)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8de68228-ef0e-4ead-b27c-3e4445e5f381",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
