--- a/notebooks/2. Data fusion.ipynb
+++ b/notebooks/2. Data fusion.ipynb
@@ -72,7 +72,7 @@
    "id": "ff3cc8fa-6017-4e03-a005-2879a48bf906",
    "metadata": {},
    "source": [
-    "### Using GeoTIFF data\n",
+    "### [Optional] Ground fuser using GeoTIFF data\n",
     "\n",
     "First, download the required GeoTIFF tile(s). E.g. for our demo point cloud, this is:\n",
     "```sh\n",
@@ -105,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Data folder for the fusers.\n",
+    "# Data folder for the AHN fuser.\n",
     "ahn_data_folder = '../datasets/ahn/'\n",
     "\n",
     "# Ground fuser using AHN GeoTIFF data.\n",
@@ -116,6 +116,37 @@
     "\n",
     "# Set-up pipeline.\n",
     "fusers = (geotiff_ground_fuser,)\n",
+    "pipeline = fusion.FusionPipeline(fusers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fleet-methodology",
+   "metadata": {},
+   "source": [
+    "### [Optional] Building fuser using BGT data\n",
+    "First, download the required BGT data. E.g. for our demo point cloud, run the following lines in a terminal: \n",
+    "```sh\n",
+    "$ cd ../scripts\n",
+    "$ python bgt_scrape.py --bbox_region \"119300,485150,119350,485100\" --out_folder ../datasets/bgt/\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "caring-bryan",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data folder for the BGT fuser.\n",
+    "bgt_data_folder = '../datasets/bgt/'\n",
+    "\n",
+    "# Building fuser using BGT building footprint data.\n",
+    "bgt_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, bgt_folder=bgt_data_folder)\n",
+    "\n",
+    "# Set-up pipeline.\n",
+    "fusers = (bgt_building_fuser,)\n",
     "pipeline = fusion.FusionPipeline(fusers)"
    ]
   },
