Optional to Alternative

--- a/notebooks/2. Data fusion.ipynb
+++ b/notebooks/2. Data fusion.ipynb
@@ -39,7 +39,7 @@
    "id": "03d5299a-1ac2-4a63-949a-ff1ce2b77eb2",
    "metadata": {},
    "source": [
-    "### Using pre-processed AHN data\n",
+    "### Ground and building fuser using pre-processed AHN data\n",
     "\n",
     "Prepare data following notebook [1. AHN preprocessing](1.%20AHN%20preprocessing.ipynb)."
    ]
@@ -72,7 +72,7 @@
    "id": "ff3cc8fa-6017-4e03-a005-2879a48bf906",
    "metadata": {},
    "source": [
-    "### [Optional] Ground fuser using GeoTIFF data\n",
+    "### [Alternative] Ground fuser using GeoTIFF data\n",
     "\n",
     "First, download the required GeoTIFF tile(s). E.g. for our demo point cloud, this is:\n",
     "```sh\n",
@@ -124,7 +124,7 @@
    "id": "fleet-methodology",
    "metadata": {},
    "source": [
-    "### [Optional] Building fuser using BGT data\n",
+    "### [Alternative] Building fuser using BGT data\n",
     "First, download the required BGT data. E.g. for our demo point cloud, run the following lines in a terminal: \n",
     "```sh\n",
     "$ cd ../scripts\n",
@@ -228,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
