--- a/notebooks/2. Data fusion.ipynb
+++ b/notebooks/2. Data fusion.ipynb
@@ -143,7 +143,7 @@
     "bgt_data_folder = '../datasets/bgt/'\n",
     "\n",
     "# Building fuser using BGT building footprint data.\n",
-    "bgt_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, bgt_folder=bgt_data_folder)\n",
+    "bgt_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, building_offset=1, bgt_folder=bgt_data_folder)\n",
     "\n",
     "# Set-up pipeline.\n",
     "fusers = (bgt_building_fuser,)\n",
