Small changes based on  feedback.

--- a/notebooks/2. Data fusion.ipynb
+++ b/notebooks/2. Data fusion.ipynb
@@ -128,7 +128,7 @@
     "First, download the required BGT data. E.g. for our demo point cloud, run the following lines in a terminal: \n",
     "```sh\n",
     "$ cd ../scripts\n",
-    "$ python bgt_scrape.py --bbox_region \"119300,485150,119350,485100\" --out_folder ../datasets/bgt/\n",
+    "$ python bgt_building_scraper.py --bbox_region \"119300,485150,119350,485100\" --out_folder ../datasets/bgt/\n",
     "```"
    ]
   },
