Back to original

--- a/notebooks/3. Region growing.ipynb
+++ b/notebooks/3. Region growing.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "actual-jungle",
+   "id": "proved-context",
    "metadata": {},
    "source": [
     "## Process a single file"
@@ -57,12 +57,10 @@
     "\n",
     "# Read LiDAR point cloud\n",
     "las = pylas.read(in_file)\n",
-    "\n",
     "# Initialize region growing class\n",
     "reg = RegionGrowing()\n",
-    "\n",
     "# Process the file.\n",
-    "reg.set_input_cloud(las, unlabelled_label)\n",
+    "reg.set_input_cloud(las)\n",
     "reg.set_initial_seed_points(las.label, seed_point_label)\n",
     "regions = reg.region_growing()"
    ]
@@ -77,14 +75,6 @@
     "# Save classification labels to .laz file\n",
     "label_and_save_las(las, regions, out_file)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "handy-public",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
