Exclude a label with region growing code

--- a/notebooks/3. Region growing.ipynb
+++ b/notebooks/3. Region growing.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "proved-context",
+   "id": "attended-worry",
    "metadata": {},
    "source": [
     "## Process a single file"
@@ -50,19 +50,32 @@
    "source": [
     "# Class with the initial seed points that we want to grow\n",
     "seed_point_label = Labels.BUILDING\n",
-    "unlabelled_label = 1\n",
+    "exclude_label = Labels.GROUND\n",
     "# Select the file to process.\n",
     "in_file = '../datasets/pointcloud/labelled_2386_9702.laz'\n",
     "out_file = '../datasets/pointcloud/grown_2386_9702.laz'\n",
     "\n",
     "# Read LiDAR point cloud\n",
     "las = pylas.read(in_file)\n",
+    "# Configure the points that we want to perform region growing on \n",
+    "mask = (las.label != exclude_label)\n",
     "# Initialize region growing class\n",
     "reg = RegionGrowing()\n",
-    "# Process the file.\n",
-    "reg.set_input_cloud(las)\n",
-    "reg.set_initial_seed_points(las.label, seed_point_label)\n",
+    "# Process the file\n",
+    "reg.set_input_cloud(las, seed_point_label, mask)\n",
     "regions = reg.region_growing()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "large-citizen",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add label to the regions\n",
+    "labels = las.label\n",
+    "labels[regions] = seed_point_label"
    ]
   },
   {
@@ -73,8 +86,16 @@
    "outputs": [],
    "source": [
     "# Save classification labels to .laz file\n",
-    "label_and_save_las(las, regions, out_file)"
+    "label_and_save_las(las, labels, out_file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "banned-integrity",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
