Updated description in notebooks.

--- a/notebooks/1. AHN preprocessing.ipynb
+++ b/notebooks/1. AHN preprocessing.ipynb
@@ -178,7 +178,8 @@
    "metadata": {},
    "source": [
     "This will look like:\n",
-    "![Surface Plot](https://github.com/Amsterdam-AI-Team/Urban_PointCloud_Processing/blob/main/media/examples/surface_plot.png)"
+    "\n",
+    "![Surface Plot](../media/examples/surface_plot.png)"
    ]
   },
   {
