--- a/notebooks/2. Data fusion.ipynb
+++ b/notebooks/2. Data fusion.ipynb
@@ -63,7 +63,6 @@
     "\n",
     "# Set-up pipeline.\n",
     "fusers = (npz_ground_fuser, npz_building_fuser)\n",
-    "#fusers = (npz_ground_fuser,)\n",
     "pipeline = fusion.FusionPipeline(fusers)"
    ]
   },
@@ -152,10 +151,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b884b35-c805-4942-b903-58fc4d13ef24",
+   "id": "de4fc39f-fd03-47a9-9269-c88706abd5f3",
    "metadata": {},
    "source": [
-    "## Process a single file"
+    "## Process point clouds and save the results\n",
+    "\n",
+    "The FusionPipeline can now be used to process point clouds. Labels will be written to the LAS file as a new _extended field_ called _label_.\n",
+    "\n",
+    "### Process a single file"
    ]
   },
   {
@@ -181,7 +184,7 @@
    "id": "c57e2e7a-a63d-4dfa-83b2-2f825096bcf9",
    "metadata": {},
    "source": [
-    "## Process a folder"
+    "### Process a folder"
    ]
   },
   {
@@ -228,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
