--- a/notebooks/1. AHN preprocessing.ipynb
+++ b/notebooks/1. AHN preprocessing.ipynb
@@ -179,7 +179,7 @@
    "source": [
     "This will look like:\n",
     "\n",
-    "![Surface Plot](../media/examples/surface_plot.png)"
+    "![Surface Plot](https://github.com/Amsterdam-AI-Team/Urban_PointCloud_Processing/raw/main/media/examples/surface_plot.png)"
    ]
   },
   {
