Add label connected comp

--- a/notebooks/3. Region growing.ipynb
+++ b/notebooks/3. Region growing.ipynb
@@ -38,7 +38,7 @@
    "id": "attended-worry",
    "metadata": {},
    "source": [
-    "## Process a single file"
+    "### Process a single file"
    ]
   },
   {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "banned-integrity",
+   "id": "printable-multiple",
    "metadata": {},
    "outputs": [],
    "source": []
