--- a/notebooks/3. Label connected comp.ipynb
+++ b/notebooks/3. Label connected comp.ipynb
@@ -7,7 +7,7 @@
     "## Label Connected Components \n",
     "\n",
     "CloudCompare Python wrapper, works on **linux only**.\n",
-    "This code performs Label Connected Components Segmentation. See: https://www.cloudcompare.org/doc/wiki/index.php?title=Label_Connected_Components\n",
+    "This code performs [Label Connected Components Segmentation](https://www.cloudcompare.org/doc/wiki/index.php?title=Label_Connected_Components).\n",
     "\n",
     "### Installation instructions\n",
     "This CloudCompare Python wrapper requires the following prerequisites in order to function correctly.\n",
