--- a/notebooks/3. Region growing.ipynb
+++ b/notebooks/3. Region growing.ipynb
@@ -51,6 +51,7 @@
     "# Class with the initial seed points that we want to grow\n",
     "seed_point_label = Labels.BUILDING\n",
     "exclude_label = Labels.GROUND\n",
+    "\n",
     "# Select the file to process.\n",
     "in_file = '../datasets/pointcloud/labelled_2386_9702.laz'\n",
     "out_file = '../datasets/pointcloud/grown_2386_9702.laz'\n",
@@ -63,19 +64,7 @@
     "reg = RegionGrowing()\n",
     "# Process the file\n",
     "reg.set_input_cloud(las, seed_point_label, mask)\n",
-    "regions = reg.region_growing()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "large-citizen",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Add label to the regions\n",
-    "labels = las.label\n",
-    "labels[regions] = seed_point_label"
+    "regions = reg.region_growing(seed_point_label, las.label)"
    ]
   },
   {
@@ -86,13 +75,13 @@
    "outputs": [],
    "source": [
     "# Save classification labels to .laz file\n",
-    "label_and_save_las(las, labels, out_file)"
+    "label_and_save_las(las, regions, out_file)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "printable-multiple",
+   "id": "coordinate-viking",
    "metadata": {},
    "outputs": [],
    "source": []
