--- a/notebooks/3. Label connected comp.ipynb
+++ b/notebooks/3. Label connected comp.ipynb
@@ -36,6 +36,7 @@
     "import set_path\n",
     "\n",
     "import pylas\n",
+    "import time\n",
     "\n",
     "from src.cluster.label_connected_comp import LabelConnectedComp\n",
     "from src.utils.las_utils import label_and_save_las\n",
@@ -52,7 +53,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Define labels to use\n",
@@ -65,19 +68,25 @@
     "in_file = \"../datasets/pointcloud/labelled_2386_9702.laz\"\n",
     "out_file = \"../datasets/pointcloud/grown_2386_9702.las\"\n",
     "\n",
+    "start = time.time()\n",
+    "\n",
     "# This example shows how to create a ccPointCloud from your custom data\n",
     "# here, we will load data from a las file using pylas.\n",
     "las = pylas.read(in_file)\n",
     "# Configure the points that we want to perform region growing on \n",
     "mask = (las.label != exclude_label)\n",
     "# Initialize region growing class\n",
-    "lcc = LabelConnectedComp()\n",
+    "lcc = LabelConnectedComp(octree_level=10, min_points=100)\n",
     "# Process the file\n",
     "lcc.set_input_cloud(las, mask)\n",
     "lcc.label_connected_comp()\n",
     "# (Optional) Noise filter\n",
     "# lcc.min_points_per_component(noise_label, min_component_size=100)\n",
-    "regions = lcc.fill_components(las.label, unlabelled_label, seed_point_label, mask)"
+    "#regions = lcc.fill_components(las.label, unlabelled_label, seed_point_label, mask)\n",
+    "regions = lcc.fill_components_2(las.label, unlabelled_label, seed_point_label, mask, threshold=0.1)\n",
+    "\n",
+    "end = time.time()\n",
+    "print(f'Finished in {end-start:.2f} seconds.')"
    ]
   },
   {
@@ -114,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
