First changes after feedback

--- a/notebooks/3. Clustering based region growing.ipynb
+++ b/notebooks/3. Clustering based region growing.ipynb
@@ -4,16 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Label Connected Components \n",
+    "# Clustering based region growing segmentation\n",
+    "Starting from seed points, the Clustering based region-growing algorithm is used to decide whether a point should be included in a region or not.\n",
     "\n",
-    "CloudCompare Python wrapper, works on **linux only**.\n",
-    "This code performs [Label Connected Components Segmentation](https://www.cloudcompare.org/doc/wiki/index.php?title=Label_Connected_Components).\n",
+    "### Algorithm explained\n",
+    "This code performs clustering based region growing segmentation. The main tasks include: \n",
+    "- The [Label Connected Components Segmentation](https://www.cloudcompare.org/doc/wiki/index.php?title=Label_Connected_Components) algorithm clusters the selected cloud(s) in smaller parts separated by a minimum distance.\n",
+    "- Next, our code grows regions, or in this case all points inside a clusters, based on a percentage of initial seed points inside a cluster. \n",
     "\n",
     "### Installation instructions\n",
-    "This CloudCompare Python wrapper requires the following prerequisites in order to function correctly.\n",
-    "- pybind11\n",
-    "- libqt5svg5-dev\n",
-    "- qt5-default\n",
+    "A Python wrapper provided for CloudCompare allows to use “Label Connected Components”. The Python wrapper works on **linux only**. The following prerequisites are required in order to function correctly.\n",
+    "- pip install pybind11\n",
+    "- sudo apt-get install libqt5svg5-dev.\n",
+    "- sudo apt-get install qt5-default\n",
     "\n",
     "Now clone the following repo:\n",
     "\n",
@@ -58,7 +61,8 @@
    },
    "outputs": [],
    "source": [
-    "# Define labels to use\n",
+    "# In this example we want to grow the building points, the initial seed points.\n",
+    "# The ground points must be removed to fast and properly cluster the cloud\n",
     "seed_point_label = Labels.BUILDING\n",
     "noise_label = Labels.NOISE\n",
     "unlabelled_label = Labels.UNLABELLED\n",
@@ -123,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
