--- a/notebooks/3. Region growing.ipynb
+++ b/notebooks/3. Region growing.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "source": [
     "# Region growing segmentation\n",
+    "Starting from seed points, the region-growing algorithm is used to decide whether a point should be included in a region or not.\n",
     "\n",
+    "### Algorithm explained\n",
     "Based on: https://pcl.readthedocs.io/projects/tutorials/en/latest/region_growing_segmentation.html\n",
     "\n",
     "With the PCL implementation, a point is picked with minimum curvature value and the region growth process is started. In our implementation, we start from initial seed points that are considered to be inside the object to be segmented. \n",
@@ -48,7 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Class with the initial seed points that we want to grow\n",
+    "# In this example we want to grow the building points, the initial seed points.\n",
+    "# The ground points must be removed to fast and properly cluster the cloud\n",
     "seed_point_label = Labels.BUILDING\n",
     "exclude_label = Labels.GROUND\n",
     "\n",
@@ -81,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "coordinate-viking",
+   "id": "actual-barbados",
    "metadata": {},
    "outputs": [],
    "source": []
