--- a/notebooks/3. Clustering based region growing.ipynb
+++ b/notebooks/3. Clustering based region growing.ipynb
@@ -13,20 +13,7 @@
     "- Next, our code grows regions, or in this case all points inside a clusters, based on a percentage of initial seed points inside a cluster. \n",
     "\n",
     "### Installation instructions\n",
-    "A Python wrapper provided for CloudCompare allows to use “Label Connected Components”. The Python wrapper works on **linux only**. The following prerequisites are required in order to function correctly.\n",
-    "- pip install pybind11\n",
-    "- sudo apt-get install libqt5svg5-dev.\n",
-    "- sudo apt-get install qt5-default\n",
-    "\n",
-    "Now clone the following repo:\n",
-    "\n",
-    "`git clone https://github.com/tmontaigu/CloudCompare-PythonPlugin.git`\n",
-    "\n",
-    "Install the pycc and cccorelib Python package from the GitHub repo:\n",
-    "\n",
-    "`cd [directory-of-the-repo]/wrapper/pycc` and `cd [directory-of-the-repo]/wrapper/cccorelib`\n",
-    "\n",
-    "`pip install .`"
+    "A Python wrapper provided for CloudCompare allows to use “Label Connected Components”. The Python wrapper works on **linux only**. This wrapper and all the dependencies can be installed using the build and installation instructions in the README at [CloudCompare-PythonPlugin.](https://github.com/tmontaigu/CloudCompare-PythonPlugin.git)"
    ]
   },
   {
@@ -80,14 +67,11 @@
     "# Configure the points that we want to perform region growing on \n",
     "mask = (las.label != exclude_label)\n",
     "# Initialize region growing class\n",
-    "lcc = LabelConnectedComp(octree_level=10, min_points=100)\n",
+    "lcc = LabelConnectedComp(octree_level=10, min_component_size=100)\n",
     "# Process the file\n",
     "lcc.set_input_cloud(las, mask)\n",
     "lcc.label_connected_comp()\n",
-    "# (Optional) Noise filter\n",
-    "# lcc.min_points_per_component(noise_label, min_component_size=100)\n",
-    "#regions = lcc.fill_components(las.label, unlabelled_label, seed_point_label, mask)\n",
-    "regions = lcc.fill_components_2(las.label, unlabelled_label, seed_point_label, mask, threshold=0.1)\n",
+    "regions = lcc.fill_components(las.label, unlabelled_label, seed_point_label, mask, threshold=0.1)\n",
     "\n",
     "end = time.time()\n",
     "print(f'Finished in {end-start:.2f} seconds.')"
