--- a/notebooks/3. Clustering based region growing.ipynb
+++ b/notebooks/3. Clustering based region growing.ipynb
@@ -61,12 +61,11 @@
     "\n",
     "start = time.time()\n",
     "\n",
-    "# This example shows how to create a ccPointCloud from your custom data\n",
-    "# here, we will load data from a las file using pylas.\n",
+    "# Load data from a las file using pylas.\n",
     "las = pylas.read(in_file)\n",
     "# Configure the points that we want to perform region growing on \n",
     "mask = (las.label != exclude_label)\n",
-    "# Initialize region growing class\n",
+    "# Initialize clustering based region growing class\n",
     "lcc = LabelConnectedComp(octree_level=10, min_component_size=100)\n",
     "# Process the file\n",
     "lcc.set_input_cloud(las, mask)\n",
