--- a/notebooks/3. Clustering based region growing.ipynb
+++ b/notebooks/3. Clustering based region growing.ipynb
@@ -52,7 +52,6 @@
     "# The ground points must be removed to fast and properly cluster the cloud\n",
     "seed_point_label = Labels.BUILDING\n",
     "noise_label = Labels.NOISE\n",
-    "unlabelled_label = Labels.UNLABELLED\n",
     "exclude_label = Labels.GROUND\n",
     "\n",
     "# Select the file to process.\n",
@@ -70,7 +69,7 @@
     "# Process the file\n",
     "lcc.set_input_cloud(las, mask)\n",
     "lcc.label_connected_comp()\n",
-    "regions = lcc.fill_components(las.label, unlabelled_label, seed_point_label, mask, threshold=0.1)\n",
+    "regions = lcc.fill_components(las.label, seed_point_label, mask, threshold=0.1)\n",
     "\n",
     "end = time.time()\n",
     "print(f'Finished in {end-start:.2f} seconds.')"
