--- a/notebooks/3. Region growing.ipynb
+++ b/notebooks/3. Region growing.ipynb
@@ -93,6 +93,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save labelled point cloud\n",
+    "label_and_save_las(las, regions, out_file)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
