--- a/notebooks/3. Region growing.ipynb
+++ b/notebooks/3. Region growing.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Region Growing\n",
     "\n",
-    "Starting from seed points, the region-growing algorithm is used to decide whether a point should be included in a region or not. Two diffenerent implemenations are explained in this notebook:\n",
+    "Starting from seed points, the region-growing algorithm is used to decide whether a point should be included in a region or not. Two different implementations are explained in this notebook:\n",
     "- Region growing based on the Point Cloud Library (PCL) implementation\n",
     "- Clustering based region growing using \"Label Connected Components\"\n"
    ]
