--- a/notebooks/3. Region growing.ipynb
+++ b/notebooks/3. Region growing.ipynb
@@ -139,7 +139,7 @@
     "# Process the file\n",
     "lcc.set_input_cloud(las, mask)\n",
     "lcc.label_connected_comp()\n",
-    "regions = lcc.fill_components(las.label, seed_point_label, mask, threshold=0.1)\n",
+    "regions = lcc.fill_components(seed_point_label, threshold=0.1)\n",
     "\n",
     "end = time.time()\n",
     "print(f'Finished in {end-start:.2f} seconds.')"
