Add region growing info to READMEs

--- a/notebooks/3. Region growing.ipynb
+++ b/notebooks/3. Region growing.ipynb
@@ -43,12 +43,7 @@
     "\n",
     "# Select the file to process.\n",
     "in_file = \"../datasets/pointcloud/labelled_2386_9702.laz\"\n",
-    "out_file = \"../datasets/pointcloud/grown_2386_9702.laz\"\n",
-    "\n",
-    "# Read LiDAR point cloud\n",
-    "las = pylas.read(in_file)\n",
-    "# Configure the points that we want to perform region growing on \n",
-    "mask = (las.label != exclude_label)"
+    "out_file = \"../datasets/pointcloud/grown_2386_9702.laz\""
    ]
   },
   {
@@ -71,7 +66,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.cluster.region_growing import RegionGrowing"
+    "from src.region_growing.region_growing import RegionGrowing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read LiDAR point cloud\n",
+    "las = pylas.read(in_file)\n",
+    "# Configure the points that we want to perform region growing on \n",
+    "mask = (las.label != exclude_label)"
    ]
   },
   {
@@ -123,7 +130,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.cluster.label_connected_comp import LabelConnectedComp"
+    "from src.region_growing.label_connected_comp import LabelConnectedComp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read LiDAR point cloud\n",
+    "las = pylas.read(in_file)\n",
+    "# Configure the points that we want to perform region growing on \n",
+    "mask = (las.label != exclude_label)"
    ]
   },
   {
