Fix complete solution for new module name.

--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -26,7 +26,7 @@
     "import src.fusion as fusion\n",
     "import src.utils.ahn_utils as ahn_utils\n",
     "import src.utils.las_utils as las_utils\n",
-    "from src.cluster.label_connected_comp import LabelConnectedComp\n",
+    "from src.region_growing.label_connected_comp import LabelConnectedComp\n",
     "from src.utils.labels import Labels"
    ]
   },
