--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -139,7 +139,7 @@
    "source": [
     "## View the result (e.g. in CloudCompare)\n",
     "\n",
-    "The final result can be viewed in CloudCompare. Open the out_file (e.g. datasets/pointcloud/labelled_2386_9702.laz) and change \"Colors\" to \"Scalar field\".\n",
+    "The final result can be viewed in CloudCompare. Open the out_file (e.g. datasets/pointcloud/labelled_2386_9702.laz) and change `Colors` from \"RGB\" to \"Scalar field\".\n",
     "\n",
     "The result should look like this:\n",
     "![Demo result](https://github.com/Amsterdam-AI-Team/Urban_PointCloud_Processing/blob/main/media/examples/demo_result.png)"
