--- a/notebooks/2. Data fusion.ipynb
+++ b/notebooks/2. Data fusion.ipynb
@@ -59,11 +59,7 @@
     "                                   method='npz', target='ground', epsilon=0.2)\n",
     "# Building fuser using pre-processed AHN data.\n",
     "npz_building_fuser = fusion.AHNFuser(Labels.BUILDING, ahn_data_folder,\n",
-    "                                     method='npz', target='building', epsilon=0.2)\n",
-    "\n",
-    "# Set-up pipeline.\n",
-    "fusers = (npz_ground_fuser, npz_building_fuser)\n",
-    "pipeline = fusion.FusionPipeline(fusers)"
+    "                                     method='npz', target='building', epsilon=0.2)"
    ]
   },
   {
@@ -111,11 +107,7 @@
     "geotiff_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_data_folder,\n",
     "                                       method='geotiff', target='ground', epsilon=0.2,\n",
     "                                       fill_gaps=True, max_gap_size=100,\n",
-    "                                       smoothen=True, smooth_thickness=2)\n",
-    "\n",
-    "# Set-up pipeline.\n",
-    "fusers = (geotiff_ground_fuser,)\n",
-    "pipeline = fusion.FusionPipeline(fusers)"
+    "                                       smoothen=True, smooth_thickness=2)"
    ]
   },
   {
@@ -142,11 +134,7 @@
     "bgt_data_folder = '../datasets/bgt/'\n",
     "\n",
     "# Building fuser using BGT building footprint data.\n",
-    "bgt_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, building_offset=1, bgt_folder=bgt_data_folder)\n",
-    "\n",
-    "# Set-up pipeline.\n",
-    "fusers = (bgt_building_fuser,)\n",
-    "pipeline = fusion.FusionPipeline(fusers)"
+    "bgt_building_fuser = fusion.BGTBuildingFuser(Labels.BUILDING, building_offset=1, bgt_folder=bgt_data_folder)"
    ]
   },
   {
@@ -156,8 +144,38 @@
    "source": [
     "## Process point clouds and save the results\n",
     "\n",
-    "The FusionPipeline can now be used to process point clouds. Labels will be written to the LAS file as a new _extended field_ called _label_.\n",
-    "\n",
+    "The FusionPipeline can now be used to process point clouds. Labels will be written to the LAS file as a new _extended field_ called _label_."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c679f625",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set-up full AHN pipeline.\n",
+    "fusers = (npz_ground_fuser, npz_building_fuser)\n",
+    "pipeline = fusion.FusionPipeline(fusers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2eab2053",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ALTERNATIVE: Set-up AHN GeoTIFF + BGT pipeline.\n",
+    "fusers = (geotiff_ground_fuser, bgt_building_fuser)\n",
+    "pipeline = fusion.FusionPipeline(fusers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69b5febb",
+   "metadata": {},
+   "source": [
     "### Process a single file"
    ]
   },
