--- a/notebooks/0. Complete solution.ipynb
+++ b/notebooks/0. Complete solution.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Urban PointCloud Processing\n",
     "\n",
-    "This notebook provides a brief tutorial to the various tools available in this repository. More detailed examples are provided in separate notebooks."
+    "This notebook shows a \"complete solution\" in which a single point cloud file is automatically labeled using the various tools available in this repository. For clarity we skip [preprocessing of AHN data](1.%20AHN%20preprocessing.ipynb) and assume all necassary data files are already available."
    ]
   },
   {
@@ -16,7 +16,134 @@
    "id": "ac229113-5968-4f88-a818-38fa0a297f78",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Add project src to path.\n",
+    "import set_path\n",
+    "\n",
+    "# Import modules.\n",
+    "import time\n",
+    "\n",
+    "import src.fusion as fusion\n",
+    "import src.utils.ahn_utils as ahn_utils\n",
+    "import src.utils.las_utils as las_utils\n",
+    "from src.region_growing.label_connected_comp import LabelConnectedComp\n",
+    "from src.utils.labels import Labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b25ce935-0e9b-4fbd-bd35-a08db3bdf05b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select the file to process.\n",
+    "in_file = '../datasets/pointcloud/filtered_2386_9702.laz'\n",
+    "out_file = '../datasets/pointcloud/labelled_2386_9702.laz'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a09887e-7688-413a-ba18-29865789653c",
+   "metadata": {},
+   "source": [
+    "## Data Fusion\n",
+    "\n",
+    "First, we use data fusion to automatically label ground and building points.\n",
+    "\n",
+    "For details and more options, see [2. Data fusion](2.%20Data%20fusion.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f7eb47f-7a5d-4fce-a5aa-6e9030eabea4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data folder for the fusers.\n",
+    "ahn_data_folder = '../datasets/ahn/'\n",
+    "\n",
+    "# Ground fuser using pre-processed AHN data.\n",
+    "npz_ground_fuser = fusion.AHNFuser(Labels.GROUND, ahn_data_folder,\n",
+    "                                   method='npz', target='ground', epsilon=0.2)\n",
+    "# Building fuser using pre-processed AHN data.\n",
+    "npz_building_fuser = fusion.AHNFuser(Labels.BUILDING, ahn_data_folder,\n",
+    "                                     method='npz', target='building', epsilon=0.2)\n",
+    "\n",
+    "# Set-up pipeline.\n",
+    "fusers = (npz_ground_fuser, npz_building_fuser)\n",
+    "pipeline = fusion.FusionPipeline(fusers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dde56738-2f73-43be-b913-3fd4d4401a30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Process the file.\n",
+    "start = time.time()\n",
+    "pipeline.process_file(in_file, out_file=out_file)\n",
+    "end = time.time()\n",
+    "print(f'Tile labelled in {end-start:.2f} seconds.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0138a703-17a8-46ef-8549-3cc585f53bd6",
+   "metadata": {},
+   "source": [
+    "## Region Growing\n",
+    "\n",
+    "Then, we use region growing to refine the buildings. This will make sure that protruding elements such as balconies are labelled correctly.\n",
+    "\n",
+    "For details and more options, see [3. Region growing](3.%20Region%20growing.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbb7b29c-f000-4bec-8975-55c7ea5020fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start = time.time()\n",
+    "\n",
+    "# Read the LAS file that was created by the data fusion process.\n",
+    "las = las_utils.read_las(out_file)\n",
+    "\n",
+    "# Create a mask that excludes ground points from being added to buildings.\n",
+    "mask = (las.label != Labels.GROUND)\n",
+    "\n",
+    "# Initialize clustering-based region growing class. \n",
+    "lcc = LabelConnectedComp(octree_level=10, min_component_size=100)\n",
+    "\n",
+    "# Process the file\n",
+    "lcc.set_input_cloud(las, mask)\n",
+    "lcc.label_connected_comp()\n",
+    "labels = lcc.fill_components(seed_point_label=Labels.BUILDING, threshold=0.1)\n",
+    "\n",
+    "# Save the refined labels.\n",
+    "las_utils.label_and_save_las(las, labels, out_file)\n",
+    "\n",
+    "end = time.time()\n",
+    "print(f'Finished in {end-start:.2f} seconds.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a99c4260-e3f9-460f-9941-965f2a438d6b",
+   "metadata": {},
+   "source": [
+    "## View the result (e.g. in CloudCompare)\n",
+    "\n",
+    "The final result can be viewed in CloudCompare. Open the out_file (e.g. datasets/pointcloud/labelled_2386_9702.laz) and change `Colors` from \"RGB\" to \"Scalar field\".\n",
+    "\n",
+    "The result should look like this:\n",
+    "![Demo result](https://github.com/Amsterdam-AI-Team/Urban_PointCloud_Processing/blob/main/media/examples/demo_result.png)"
+   ]
   }
  ],
  "metadata": {
