Non-parallel implementation.

--- a/notebooks/Speed_test.ipynb
+++ b/notebooks/Speed_test.ipynb
@@ -56,8 +56,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ray_trace finished in 2.0514676570892334 seconds.\n",
-      "sm_parallel finished in 0.2501485347747803 seconds.\n"
+      "ray_trace finished in 2.0636019706726074 seconds.\n",
+      "sm_parallel finished in 0.2504231929779053 seconds.\n",
+      "sm_single finished in 0.2989022731781006 seconds.\n"
      ]
     }
    ],
@@ -78,12 +79,23 @@
     "for polygon in buildings:\n",
     "    sm_building_mask.extend(clip_utils.poly_clip(xy_points, polygon, method='sm'))\n",
     "end = time.time()\n",
-    "print(f'sm_parallel finished in {end-start} seconds.')"
+    "print(f'sm_parallel finished in {end-start} seconds.')\n",
+    "\n",
+    "\n",
+    "# warmup\n",
+    "clip_utils.poly_clip(xy_points, buildings[0], method='sm_single')\n",
+    "\n",
+    "start = time.time()\n",
+    "sms_building_mask = []\n",
+    "for polygon in buildings:\n",
+    "    sms_building_mask.extend(clip_utils.poly_clip(xy_points, polygon, method='sm_single'))\n",
+    "end = time.time()\n",
+    "print(f'sm_single finished in {end-start} seconds.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "1016f61d-780b-46fb-826f-b28f021775ce",
    "metadata": {},
    "outputs": [
@@ -91,7 +103,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.87 s ± 21.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.82 s ± 5.82 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -104,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "d570e2b9-72dd-45ee-a3f4-e8e39f67bdf4",
    "metadata": {},
    "outputs": [
@@ -112,12 +124,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "232 ms ± 2.71 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "237 ms ± 900 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
-    "%%timeit\n",
+    "%%timeit -n10 -r7\n",
     "sm_building_mask = []\n",
     "for polygon in buildings:\n",
     "    sm_building_mask.extend(clip_utils.poly_clip(xy_points, polygon, method='sm'))"
@@ -125,7 +137,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
+   "id": "5a98452b-d306-4d65-b148-61ddfa319e07",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "287 ms ± 1.38 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit -n10 -r7\n",
+    "sms_building_mask = []\n",
+    "for polygon in buildings:\n",
+    "    sms_building_mask.extend(clip_utils.poly_clip(xy_points, polygon, method='sm_single'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "e5ec5537-2fde-419b-bced-77083c8ea547",
    "metadata": {},
    "outputs": [
@@ -135,7 +168,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,8 +179,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "49f7a1f0-ae71-4d68-a673-cc6b7015b645",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sms_building_mask == ray_building_mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d33e26f-2fcc-4587-8c2c-cd9cd87116e0",
    "metadata": {},
    "outputs": [],
    "source": []
