Twijfel om zoiets te doen

--- a/notebooks/0.1 Complete solution.ipynb
+++ b/notebooks/0.1 Complete solution.ipynb
@@ -26,7 +26,6 @@
     "import src.fusion as fusion\n",
     "import src.utils.ahn_utils as ahn_utils\n",
     "import src.utils.las_utils as las_utils\n",
-    "from src.region_growing.label_connected_comp import LabelConnectedComp\n",
     "from src.utils.labels import Labels"
    ]
   },
@@ -70,10 +69,13 @@
     "# Building fuser using pre-processed AHN data.\n",
     "npz_building_fuser = fusion.AHNFuser(Labels.BUILDING, ahn_data_folder,\n",
     "                                     method='npz', target='building', epsilon=0.2)\n",
+    "# Region growing\n",
+    "building_region_growing_fuser = fusion.RegionGrowingFuser(Labels.BUILDING)\n",
     "\n",
     "# Set-up pipeline.\n",
     "fusers = (npz_ground_fuser, npz_building_fuser)\n",
-    "pipeline = fusion.FusionPipeline(fusers)"
+    "region_growing = (building_region_growing_fuser,)\n",
+    "pipeline = fusion.FusionPipeline(fusers, region_growing)"
    ]
   },
   {
@@ -83,9 +85,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Process the file.\n",
     "start = time.time()\n",
-    "pipeline.process_file(in_file, out_file=out_file)\n",
+    "# Process the file.\n",
+    "pipeline.process_file(in_file, out_file)\n",
     "end = time.time()\n",
     "print(f'Tile labelled in {end-start:.2f} seconds.')"
    ]
@@ -99,7 +101,17 @@
     "\n",
     "Then, we use region growing to refine the buildings. This will make sure that protruding elements such as balconies are labelled correctly.\n",
     "\n",
-    "For details and more options, see [3. Region growing](3.%20Region%20growing.ipynb)."
+    "For details, installation instructions and more options, see [3. Region growing](3.%20Region%20growing.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "consolidated-light",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.region_growing.region_growing import RegionGrowing"
    ]
   },
   {
@@ -111,22 +123,17 @@
    "source": [
     "start = time.time()\n",
     "\n",
-    "# Read the LAS file that was created by the data fusion process.\n",
-    "las = las_utils.read_las(out_file)\n",
-    "\n",
     "# Create a mask that excludes ground points from being added to buildings.\n",
-    "mask = (las.label != Labels.GROUND)\n",
+    "mask = (las_labels != Labels.GROUND)\n",
     "\n",
-    "# Initialize clustering-based region growing class. \n",
-    "lcc = LabelConnectedComp(octree_level=10, min_component_size=100)\n",
-    "\n",
+    "# Initialize region growing class\n",
+    "reg = RegionGrowing()\n",
     "# Process the file\n",
-    "lcc.set_input_cloud(las, mask)\n",
-    "lcc.label_connected_comp()\n",
-    "labels = lcc.fill_components(seed_point_label=Labels.BUILDING, threshold=0.1)\n",
+    "reg.set_input_cloud(las, las_labels, Labels.BUILDING, mask)\n",
+    "las_labels = reg.region_growing()\n",
     "\n",
     "# Save the refined labels.\n",
-    "las_utils.label_and_save_las(las, labels, out_file)\n",
+    "las_utils.label_and_save_las(las, las_labels, out_file)\n",
     "\n",
     "end = time.time()\n",
     "print(f'Finished in {end-start:.2f} seconds.')"
