Region growing abstract class

--- a/notebooks/0.1 Complete solution.ipynb
+++ b/notebooks/0.1 Complete solution.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ac229113-5968-4f88-a818-38fa0a297f78",
    "metadata": {},
    "outputs": [],
@@ -24,6 +24,7 @@
     "import time\n",
     "\n",
     "import src.fusion as fusion\n",
+    "import src.region_growing as grower\n",
     "import src.utils.ahn_utils as ahn_utils\n",
     "import src.utils.las_utils as las_utils\n",
     "from src.utils.labels import Labels"
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b25ce935-0e9b-4fbd-bd35-a08db3bdf05b",
    "metadata": {},
    "outputs": [],
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2f7eb47f-7a5d-4fce-a5aa-6e9030eabea4",
    "metadata": {},
    "outputs": [],
@@ -70,7 +71,7 @@
     "npz_building_fuser = fusion.AHNFuser(Labels.BUILDING, ahn_data_folder,\n",
     "                                     method='npz', target='building', epsilon=0.2)\n",
     "# Region growing\n",
-    "building_region_growing_fuser = fusion.RegionGrowingFuser(Labels.BUILDING)\n",
+    "building_region_growing_fuser = grower.RegionGrowing(Labels.BUILDING)\n",
     "\n",
     "# Set-up pipeline.\n",
     "fusers = (npz_ground_fuser, npz_building_fuser)\n",
@@ -80,10 +81,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "dde56738-2f73-43be-b913-3fd4d4401a30",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NOTE: Input point cloud does not contain any seed points.\n",
+      "There are 0 points added\n",
+      "Tile labelled in 27.71 seconds.\n"
+     ]
+    }
+   ],
    "source": [
     "start = time.time()\n",
     "# Process the file.\n",
@@ -150,6 +161,47 @@
     "\n",
     "The result should look like this:\n",
     "![Demo result](https://github.com/Amsterdam-AI-Team/Urban_PointCloud_Processing/blob/main/media/examples/demo_result.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "expected-criminal",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "labels = np.array([1,0,0,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "reliable-semester",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = (labels != 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "distinct-feeling",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "received-romantic",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask moet alles op true"
    ]
   }
  ],
